[project]
name = "tweet-analyze-backend"
version = "0.1.0"
description = ""
authors = [{ name = "Tuvix Shih", email = "tuvix@ninthday.info" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "node2vec (>=0.5.0,<0.6.0)",
    "flask (>=3.1.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "bitermplus (>=0.7.0,<0.8.0)",
    "emoji (>=2.14.1,<3.0.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "tmplot (>=0.2.0,<0.3.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pre-commit = "^4.2.0"
